# phd-josite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/build-slides/: action.yml
.github/actions/obtain-version/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: docs.yml
docs/: index.html
src/: custom.css  main.md  mkslides.yml
